[project]
name = "agents-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.14",
    "openai>=1.59.7",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.1",
    "wikipedia>=1.4.0",
]
